order-service/order-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-service
  name: order-service
  namespace: order-service
spec:
  type: NodePort
  ports:
  - port: 3002
    protocol: TCP
    targetPort: 3002
  selector:
    app: order-service
